<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">Earthquake Analysis</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="politeknik_elektronika_negeri_surabaya">Politeknik Elektronika Negeri Surabaya</string>
    <string name="map_of_indonesia">The Lastest Earthquakes</string>
    <string name="magnitude_map">Magnitude Map</string>
    <string name="cluster_map">Cluster Map</string>
    <string name="magnitude_chart">Cluster Chart</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="about_content">
        <![CDATA[
        	<p>
				This application is used to view the history of earthquakes that occur in Indonesia.
				In this application there are four main features, such as The Lastest Earthquakes, Magnitude Map, Cluster Map, and  Cluster Chart.
				The Lastest Earthquakes is used to view the last 3 months of earthquakes occurrence in Indonesia.
				Magnitude Map is used to view earthquakes occurrence from the dataset to the map with different size of point based on the magnitude of the earthquake.
				Cluster Map is used to view the cluster of earthquakes occurrence from the dataset to the map.
				Cluster Chart is used to view the cluster of earthquakes occurrence from the dataset to the chart.
			</p>
			<p>
				<b>Developer</b>
				<br>
				Muhammad Askari
			</p>
			<p>
				<b>Advisor</b>
				<br>Ali Ridho Barakbah, S.Kom., Ph.D
				<br>Isbat Uzzin Nadhori, S.Kom., M.T.
			</p>		 
 		]]>
    </string>
    <string name="pens">
        <![CDATA[
        	<p>
        		Study Program of Bachelor of Information Engineering
			   	<br>Departement of Information and Computer Engineering
			   	<br>Electronic Engineering Polytechnic Institute of Surabaya
			   	<br>Politeknik Elektronika Negeri Surabaya
			   	<br>2016
			</p>		 
 		]]>
    </string>
    
    <string name="help1">
        <![CDATA[
        	<p>
        		Magnitude map is a map that shows points of earthquake. The size of points is different from each other.
        		It depends on the magnitude of the earthquake.
			</p>		 
 		]]>
    </string>
    
    <string name="help2">
        <![CDATA[
        	<p>
        		Cluster map is a map that shows points of earthquake. The color of points is different from each other.
        		It depends on the cluster of the earthquake.
			</p>		 
 		]]>
    </string>
    
    <string name="help3">
        <![CDATA[
        	<p>
        		Cluster chart is a map that shows points of earthquake. The color of points is different from each other.
        		It depends on the cluster of the earthquake.
			</p>		 
 		]]>
    </string>
    
    <string name="exit">Exit</string>
    <string name="str_tv_title">Cluster Chart</string>
    
    <string name="action_location_searching"></string>

</resources>